--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,13 @@
     "testlocal": "zuul --local 8080 --ui tape -- ./test/*.js",
     "test": "zuul -- ./test/*.js"
   },
+  "browserify": {
+    "transform": [
+      "brfs"
+    ]
+  },
   "devDependencies": {
+    "brfs": "^1.1.2",
     "browserify": "^3.33.0",
     "connect-livereload": "^0.3.2",
     "express": "^3.5.1",
