--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "an": "0.0.6",
+    "ngraph.generators": "~0.0",
+    "query-string": "~0.1.1",
     "angular": "^1.2.10",
     "githuboauth": "0.0.5",
     "twitter-bootstrap-3.0.0": "^3.0.0"
