--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,7 @@
     "start": "gulp --port 31337",
     "deploy": "./deploy-travis.sh",
     "cover": "istanbul cover ./test/flatten.js",
-    "testlocal": "zuul --local 8080 --ui tape -- ./test/*.js",
-    "test": "zuul -- ./test/*.js"
+    "test": "tap test/*.js"
   },
   "browserify": {
     "transform": [
@@ -21,6 +20,7 @@
     "gulp-concat": "^2.2.0",
     "gulp-less": "^1.2.3",
     "gulp-util": "^2.2.14",
+    "tap": "^0.4.12",
     "tape": "^2.12.0",
     "tiny-lr": "0.0.5",
     "yargs": "^1.2.1",
